updates Discussion page

--- a/static/view03.html
+++ b/static/view03.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Threads</title>
+    <title>Discussions</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.13.0/polyfill.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js">
     </script>
@@ -24,7 +24,7 @@
 
 <body>
     <!-- this is where our component will appear -->
-    <h1>Threads</h1>
+    <h1>Discussions</h1>
     <p>This page is for creating discussion threads related to events or anything else!</p>
     <hr />
     <div id="contents"></div>
